--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         "zurb/foundation": "^6.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "barryvdh/laravel-debugbar": "^2.2"
+        "fzaninotto/faker": "~1.4"
     },
     "autoload": {
         "classmap": [
